Subject suggestions: make prompt aware of subcategories